.apex/unpackaged/objects/redwing__Training_Track_Level__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Trac Levels</relationshipLabel>
        <relationshipName>Training_Track_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Trac Level</label>
    <nameField>
        <label>Learning Trac Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Trac Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>